Bug 436466 - Even with the panel set to "Always Visible" or "Windows go below" windows are rendered on top of it when Quick Tiling
Summary: Even with the panel set to "Always Visible" or "Windows go below" windows are...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: 5.21.4
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-01 19:30 UTC by Felipe Kinoshita
Modified: 2024-06-08 02:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments
observed result (934.43 KB, video/webm)
2021-05-01 19:30 UTC, Felipe Kinoshita
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Felipe Kinoshita 2021-05-01 19:30:37 UTC
Created attachment 138066 [details]
observed result

Even with the panel set to "Always Visible" or "Windows go below" windows are rendered on top of it when Quick Tiling

STEPS TO REPRODUCE
1. set a panel to "Always Visible" or "Window go below"
2. drag a window to the some panel's edge to quick tile it

OBSERVED RESULT
Window is rendered above panel.

EXPECTED RESULT
Window should respect panel configuration and be rendered below it.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed
(available in About System)
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Comment 1 Bug Janitor Service 2024-06-06 16:51:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5848
Comment 2 Zamundaaa 2024-06-07 13:25:23 UTC
Git commit b2ff46549075343710bc0e106b9e80085eae7823 by Xaver Hugl.
Committed on 07/06/2024 at 12:46.
Pushed by zamundaaa into branch 'master'.

workspace,window: don't elevate windows during electric border tiling / maximizing

Instead, move the outline below the window, so that the visual order of things stays the
same. This also fixes a visual glitch, where the outline is visible for a moment after
maximization, and is above the no-longer-elevated window
Related: bug 354741

M  +3    -2    src/window.cpp
M  +6    -0    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/b2ff46549075343710bc0e106b9e80085eae7823
Comment 3 Zamundaaa 2024-06-07 13:38:05 UTC
Git commit c0ca01317594dbbaa6fd8c8d86c79c86886b15c2 by Xaver Hugl.
Committed on 07/06/2024 at 13:27.
Pushed by zamundaaa into branch 'Plasma/6.1'.

workspace,window: don't elevate windows during electric border tiling / maximizing

Instead, move the outline below the window, so that the visual order of things stays the
same. This also fixes a visual glitch, where the outline is visible for a moment after
maximization, and is above the no-longer-elevated window
Related: bug 354741


(cherry picked from commit b2ff46549075343710bc0e106b9e80085eae7823)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +3    -2    src/window.cpp
M  +6    -0    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/c0ca01317594dbbaa6fd8c8d86c79c86886b15c2